# summarizer

./: LICENSE  README.md  summarizer.cabal
app/: Main.hs
src/: Summarizer.hs
src/Summarizer/: StopWords.hs
test/: Spec.hs
