name:                summarizer
version:             0.1.0.0
synopsis:            Simple text summaries
description:         Please see README.md
homepage:            https://github.com/acowley/summarizer#readme
license:             BSD3
license-file:        LICENSE
author:              Anthony Cowley
maintainer:          acowley@gmail.com
copyright:           (C) 2016 Anthony Cowley
category:            Text
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Summarizer, Summarizer.StopWords
  build-depends:       base, text, vector, containers, unordered-containers
  ghc-options:         -Wall
  default-language:    Haskell2010

executable summarizer
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base, text, summarizer
  default-language:    Haskell2010

test-suite spec
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base, text, hspec, summarizer
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/acowley/summarizer
